--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Jasonette</string>
-    <string name="url">https://jasonbase.com/things/mDY</string>
+    <string name="url">https://jasonette.github.io/Jasonpedia/hello.json</string>
 </resources>
