#31 WIP on map component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Jasonette</string>
     <string name="url">https://raw.githubusercontent.com/Jasonette/Jasonpedia/gh-pages/hello.json</string>
+    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
+        YOUR_API_KEY
+    </string>
 </resources>
