--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
     <string name="app_name">WeatherMe</string>
-    <string name="url">http://www.jasonbase.com/things/1wn
-</string>
+    <string name="url">http://www.jasonbase.com/things/1wn</string>
 </resources>
