use "launch" property instead of "preload"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Jasonette</string>
     <string name="url">https://jasonette.github.io/Jasonpedia/hello.json</string>
-    <string name="preload">file://preload.json</string>
+    <string name="launch">file://preload.json</string>
 </resources>
