--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Jasonette</string>
-    <string name="url">file://hello.json</string>
+    <string name="url">file://jason-app.json</string>
     <string name="launch">file://preload.json</string>
 </resources>
